show images in blocks

--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -114,6 +114,10 @@ padding-left: 100pt;
   height:50pt;
 }
 
+.imageblock {
+  text-align: center;
+  display:block;
+}
 
 /* .chair1{
   height:200pt;
