--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -110,7 +110,7 @@ border: 0;
   }
 body {
   font-family: 'MyFont';
-  background-color: #d2d4d2;
+  background-color: white;
 }
 
 h1{
@@ -125,19 +125,35 @@ h1{
 .aboutpara{
   padding-top: 30pt;
   padding-left:20pt;
+  padding-bottom: 50pt;
   text-align: left;
+  font-size:10pt;
 }
 p{
   padding-left: 20pt;
 }
 h2{
-  font-size: 20pt;
+  font-size: 15pt;
 }
 h3{
-  font-size:16pt;
+  font-size:12pt;
+}
+h4{
+  font-size: 10pt;
 }
 .pagetitle{
   padding-bottom: 20px;
+}
+.aboutmep{
+  height:400pt;
+  float:right;
+}
+
+.icons{
+  height:12pt;
+  margin-right:7pt;
+  margin-left:7pt;
+  text-decoration: none;
 }
 /* .chair1{
   height:200pt;
