--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -38,12 +38,6 @@
 }
 
 
-
-
-
-
-
-
 .titletext .btn {
     display: inline-block;
 }
@@ -64,23 +58,27 @@
   color:black;
 }
 
-.btn{
+.justify-content-between .btn{
   padding-top:7pt;
   color:#282c34
 }
-.btn:hover{
+.justify-content-between .btn:hover{
   color:grey
 }
-.btn:focus {
+.justify-content-between .btn:focus {
   box-shadow: none;
 }
-.btn:active{
+.justify-content-between .btn:active{
   color:green;
 }
 
 .image{
   width:100%;
   height:100%;
+}
+.image2{
+  width:50pt;
+  height:70pt;
 }
 
 .imageblock {
@@ -172,35 +170,4 @@ h4{
   margin-left:7pt;
   text-decoration: none;
 }
-/* .chair1{
-  height:200pt;
-  padding-top: 200pt;
-  padding-left: 20pt;
 
-}
-.chair2{
-  height:200pt;
-}
-.chair3{
-  height:200pt;
-}
-
-.kimono{
-  height:200pt;
-}
-.long{
-  height:200pt;
-
-}
-.face{
-  height:200pt;
-}
-.squid{
-  height:200pt;
-}
-.rin{
-  height:200pt;
-}
-.daniel{
-  height:200pt;
-} */
