--- a/portfolio/src/Navbar.css
+++ b/portfolio/src/Navbar.css
@@ -1,4 +1,4 @@
-.navigation-sub .item {
+/* .navigation-sub .item {
     font-size: 8pt;
     margin: 20pt;
     float: right;
@@ -17,4 +17,4 @@ h1{
 
 }
 
-
+ */
